change in mkdocs.yml to add the example 3 to gh-pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Index: index.md
   - Examples:
       - Example 1: Examples/Example1.md
+      - Example 2: Examples/Example3.md
   - API: api.md
 
 plugins:
