--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,9 @@ plugins:
             show_submodules: false
             show_if_no_docstring: false
 markdown_extensions:
-  - mdx_math
+  - pymdownx.arithmatex:
+      generic: true
 
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
